# as-moses

opencog/atomese/: CMakeLists.txt
opencog/atomese/interpreter/: CMakeLists.txt  Interpreter.cc  condlink_interpreter.cc  condlink_interpreter.h
tests/atomese/interpreter/: CMakeLists.txt  InterpreterUTest.cxxtest
